# src/main/java/hu/komplexmicroservice/rendszer_service/api/MenuControllerApi.java
@@ -1,71 +1,0 @@
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (6.3.0).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-package hu.komplexmicroservice.rendszer_service.api;
-
-import io.swagger.v3.oas.annotations.ExternalDocumentation;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.Parameters;
-import io.swagger.v3.oas.annotations.media.ArraySchema;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.security.SecurityRequirement;
-import io.swagger.v3.oas.annotations.tags.Tag;
-import io.swagger.v3.oas.annotations.enums.ParameterIn;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.multipart.MultipartFile;
-
-import jakarta.validation.Valid;
-import jakarta.validation.constraints.*;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import jakarta.annotation.Generated;
-
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-08-25T20:07:01.862170223+02:00[Europe/Budapest]")
-@Validated
-@Tag(name = "MenuController", description = "the MenuController API")
-public interface MenuControllerApi {
-
-    default Optional<NativeWebRequest> getRequest() {
-        return Optional.empty();
-    }
-
-    /**
-     * POST /DMMenuapi
-     *
-     * @param userid  (optional)
-     * @return OK (status code 200)
-     */
-    @Operation(
-        operationId = "getMenuByUserId",
-        tags = { "MenuController" },
-        responses = {
-            @ApiResponse(responseCode = "200", description = "OK", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = Object.class))
-            })
-        }
-    )
-    @RequestMapping(
-        method = RequestMethod.POST,
-        value = "/DMMenuapi",
-        produces = { "application/json" },
-        consumes = { "multipart/form-data" }
-    )
-    default ResponseEntity<Object> getMenuByUserId(
-        @Parameter(name = "userid", description = "") @Valid @RequestParam(value = "userid", required = false) Object userid
-    ) {
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-}
